--- a/src/components/CSS/Timetable.css
+++ b/src/components/CSS/Timetable.css
@@ -50,9 +50,6 @@
     .table{
         font-size: .65rem;
     }
-    .table-hours-cells{
-        font-size: .35rem;
-    }
     .mobile-view{
         display: block;
     }
