--- a/src/components/CSS/TimetableScreen.css
+++ b/src/components/CSS/TimetableScreen.css
@@ -70,3 +70,9 @@
     margin-bottom: .25rem;
   }
 }
+@media (max-width: 400px) {
+  .units-heading{
+    margin-top: .5rem;
+    margin-bottom: .25rem;
+  }
+}
